--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@ development:
   encoding: unicode
   database: soul_sac2_development
   pool: 5
-  username: soul_sac2
+  username:
   password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
@@ -43,13 +43,5 @@ test:
   encoding: unicode
   database: soul_sac2_test
   pool: 5
-  username: soul_sac2
-  password:
-
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: soul_sac2_production
-  pool: 5
-  username: soul_sac2
+  username:
   password:
